wordpress-with-mysql/wp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wp-service
  namespace: kubernetes-examples
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: wordpress
